package treulo.src.view;

public class AppView implements Observator {

}
